@@ -1,48 +1,0 @@
-#include <sys/socket.h>
-#include <errno.h>
-#include <string.h>
-#include <arpa/inet.h>
-#include <netdb.h>
-#include <unistd.h>
-#include <stdio.h>
-
-int
-connect_to_host (const char *host,
-                 int         port)
-{
-    struct hostent *hp;
-    int sock;
-    struct sockaddr_in addr;
-
-    memset(&addr, 0, sizeof(addr));
-    addr.sin_family = AF_INET;
-    addr.sin_port = htons(port);
-
-    if ((addr.sin_addr.s_addr = inet_addr(host)) == htonl(INADDR_NONE))
-    {
-	if (!(hp = gethostbyname(host))) {
-	    errno = EINVAL;
-	    return -1;
-	}
-	addr.sin_addr.s_addr = *(unsigned long *)hp->h_addr;
-    }
-
-    if ((sock = socket(AF_INET, SOCK_STREAM, 0)) < 0) {
-	return -1;
-    }
-
-    if (connect(sock, (struct sockaddr *)&addr, (sizeof(addr))) < 0) {
-	close (sock);
-	return -1;
-    }
-
-    return sock;
-}
-
-void 
-disconnect (int fd)
-{
-  if (fd > 0) {
-    close (fd);
-  }
-}
