@@ -1,29 +1,0 @@
-/*
- * vinagre-socket.h
- * This file is part of vinagre
- *
- * Copyright (C) 2007 - Jonh Wendell <wendell@bani.com.br>
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANWINDOWILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, 
- * Boston, MA 02111-1307, USA.
- */
-
-#ifndef __VINAGRE_SOCKET_H__
-#define __VINAGRE_SOCKET_H__
-
-int   connect_to_host (const char *host, int port);
-void  disconnect (int fd);
-
-#endif  /* __VINAGRE_SOCKET_H__  */
