@@ -1,5 +1,11 @@
 2007-08-31  Jonh Wendell  <jwendell@gnome.org>
 
+	* lots of files:
+	  - Added command line options parsing 
+	  - Removed my own socket code, let gtk-vnc do the dirty job 
+
+2007-08-31  Jonh Wendell  <jwendell@gnome.org>
+
 	* MAINTAINERS: Updated to the new format
 	* src/vinagre-notebook.c: Handles disconnect signal
 
